fixed overflow issue, and added scrollable section on sidebar and body. Not 100% correct, sidebar-scrollable max height needs to be fixed still

--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,5 @@
   display: flex;
   color: white;
   user-select: none;
+  background-color: #000;
 }
