--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,9 +1,10 @@
 .sidebar {
   width: 380px;
-  background-color: #000;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100%;
+  max-height: 100%;
+  /* border: 1px solid red; */
 }
 
 .sidebar-section {
@@ -75,14 +76,25 @@
   cursor: pointer;
 }
 
+.sidebar-scrollable {
+  flex: 1;
+  overflow-y: auto;
+  min-height: 0;
+  max-height: 220px;
+  padding: 20px;
+  margin: 0px -20px;
+  /* border: 1px solid blue; */
+}
+
 .sidebar-subsection {
   display: flex;
   flex-direction: column;
   background-color: #242424;
   padding-top: 0px;
   padding-left: 20px;
-  margin: 10px -12px 23px -16px;
+  margin: 0px -12px 23px -16px;
   border-radius: 8px;
+  /* border: 1px solid red; */
 }
 
 .sidebar-subsection > small {
